Fixed Trending International Destinations not responsive on phone

--- a/main.css
+++ b/main.css
@@ -809,6 +809,12 @@ input:checked + label .descriptioni {
     padding-top: 50%;
    
   }
-  
+  .containeri{
+    max-width: 100vw;
+  }
+
+  .cardi{
+    max-width: 80vw;
+  }
   
 }
